--- a/ch.psi.jcae/pom.xml
+++ b/ch.psi.jcae/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.psi</groupId>
 	<artifactId>jcae</artifactId>
-	<version>1.1.0</version>
+	<version>2.0.0</version>
 	<packaging>bundle</packaging>    <!-- (1) -->
 
 	<dependencies>
@@ -11,6 +11,16 @@
 			<groupId>epics</groupId>
 			<artifactId>caj</artifactId>
 			<version>1.1.10</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- <dependency> <groupId>org.osgi</groupId> <artifactId>org.osgi.core</artifactId> 
+			<version>4.3.0</version> </dependency> <dependency> -->
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>[1.4.0,)</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -23,12 +33,43 @@
 
 	<build>
 		<plugins>
+			<!-- (2) START -->
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Export-Package>ch.psi.jcae</Export-Package>
+						<Private-Package>ch.psi.jcae.*</Private-Package>
+						<Bundle-Activator>ch.psi.jcae.Activator</Bundle-Activator>
+						<Import-Package>org.osgi.*,!*</Import-Package>
+						<Embed-Dependency>*;scope=compile;inline=true;</Embed-Dependency>
+						<Embed-Transitive>true</Embed-Transitive>
+					</instructions>
+				</configuration>
+			</plugin>
+			<!-- (2) END -->
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+				<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 
@@ -37,6 +78,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8</version>
+				<configuration>
+				<encoding>UTF-8</encoding>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -64,7 +108,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2.1</version>
+				<version>[2.2.1,)</version>
 				<configuration>
 					<!-- Specifies the configuration file of the assembly plugin -->
 					<descriptors>
@@ -102,17 +146,6 @@
 
 			</plugin>
 
-			<plugin>    <!-- (2) START -->
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Export-Package>ch.psi.jcae</Export-Package>
-						<!-- <Private-Package>com.my.company.*</Private-Package> <Bundle-Activator>com.my.company.Activator</Bundle-Activator> -->
-					</instructions>
-				</configuration>
-			</plugin>    <!-- (2) END -->
 		</plugins>
 	</build>
 
