--- a/ch.psi.jcae/pom.xml
+++ b/ch.psi.jcae/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.psi</groupId>
 	<artifactId>jcae</artifactId>
-	<version>2.0.0.SNAPSHOT</version>
+	<version>2.0.5</version>
 	<packaging>bundle</packaging>    <!-- (1) -->
 
 	<dependencies>
@@ -41,7 +41,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Export-Package>ch.psi.jcae</Export-Package>
+						<Export-Package>ch.psi.jcae,ch.psi.jcae.annotation,ch.psi.jcae.util</Export-Package>
 						<Private-Package>ch.psi.jcae.*</Private-Package>
 						<Bundle-Activator>ch.psi.jcae.Activator</Bundle-Activator>
 						<Import-Package>org.osgi.*,!*</Import-Package>
