--- a/ch.psi.jcae/pom.xml
+++ b/ch.psi.jcae/pom.xml
@@ -67,8 +67,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -106,14 +106,16 @@
 			</plugin>
 			<!-- Assembly Plugin -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>[2.2.1,)</version>
 				<configuration>
-					<!-- Specifies the configuration file of the assembly plugin -->
-					<descriptors>
-						<descriptor>src/main/assembly/assembly.xml</descriptor>
-					</descriptors>
+					<archive>
+						<manifest>
+							<!-- <mainClass>ch.psi.sync.FileSender</mainClass> -->
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 			</plugin>
 			<!-- Google Code Upload Plugin -->
