--- a/ch.psi.jcae/pom.xml
+++ b/ch.psi.jcae/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.psi</groupId>
 	<artifactId>jcae</artifactId>
-	<version>2.1.6</version>
+	<version>2.1.7</version>
 	<packaging>bundle</packaging>    <!-- (1) -->
 
 	<dependencies>
@@ -43,7 +43,7 @@
 					<instructions>
 						<Export-Package>ch.psi.jcae,ch.psi.jcae.annotation,ch.psi.jcae.util</Export-Package>
 						<Private-Package>ch.psi.jcae.*</Private-Package>
-						<Bundle-Activator>ch.psi.jcae.Activator</Bundle-Activator>
+						<!-- <Bundle-Activator>ch.psi.jcae.Activator</Bundle-Activator> -->
 						<Import-Package>org.osgi.*,!*</Import-Package>
 						<Embed-Dependency>*;scope=compile;inline=true;</Embed-Dependency>
 						<Embed-Transitive>true</Embed-Transitive>
