--- a/ch.psi.jcae/pom.xml
+++ b/ch.psi.jcae/pom.xml
@@ -3,14 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.psi</groupId>
 	<artifactId>jcae</artifactId>
-	<version>2.1.7</version>
+	<version>2.1.9</version>
 	<packaging>bundle</packaging>    <!-- (1) -->
 
 	<dependencies>
 		<dependency>
-			<groupId>epics</groupId>
+			<groupId>org.epics</groupId>
 			<artifactId>caj</artifactId>
-			<version>1.1.10</version>
+			<version>1.1.12</version>
 			<scope>compile</scope>
 		</dependency>
 
