--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.psi</groupId>
 	<artifactId>jcae</artifactId>
-	<version>2.4.2</version>
+	<version>2.4.4</version>
 	<packaging>bundle</packaging>    <!-- (1) -->
 
 	<dependencies>
@@ -11,6 +11,12 @@
 			<groupId>org.epics</groupId>
 			<artifactId>caj</artifactId>
 			<version>1.1.12</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -58,7 +64,7 @@
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-				<encoding>UTF-8</encoding>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 
@@ -79,7 +85,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8</version>
 				<configuration>
-				<encoding>UTF-8</encoding>
+					<encoding>UTF-8</encoding>
 				</configuration>
 				<executions>
 					<execution>
