Removed login to local artifactory

--- a/build.gradle
+++ b/build.gradle
@@ -44,11 +44,11 @@ artifacts {
     archives javadocJar
 }
 
-uploadArchives {    
+uploadArchives {  
     repositories {
         mavenDeployer {
-            repository(url: "https://artifacts.psi.ch/artifactory/libs-snapshots-local"){
-            	authentication(userName: "upload", password: "{DESede}eWKHxAtQ2Dc=")
+            repository(url: artifactoryUrlLibSnap){
+            	authentication(userName: artifactoryUser, password: artifactoryPwd)
             }
             pom.groupId = group
             pom.artifactId = project.name
