--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,24 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
-    }
+plugins {
+    id "java-library"
+    id "eclipse"
+    id "maven-publish"
+    id "com.jfrog.bintray" version "1.8.4"
 }
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'maven-publish'
-
 
 sourceCompatibility = 1.7
 
-version = '2.9.7'
+version = '2.9.8'
 group = 'ch.psi'
 
 repositories {  
     mavenCentral()
-    maven { url "http://artifacts.psi.ch/artifactory/libs-releases" }
-    maven { url "http://artifacts.psi.ch/artifactory/libs-snapshots" }
+    maven { url "https://artifacts.psi.ch/artifactory/libs-releases" }
+    maven { url "https://artifacts.psi.ch/artifactory/libs-snapshots" }
 }
 
 dependencies {
-    compile 'org.epics:caj:1.1.12'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    api 'org.epics:caj:1.1.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.+'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -39,36 +31,30 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
-
-uploadArchives {  
-    repositories {
-        mavenDeployer {
-            repository(url: artifactoryUrlLibSnap){
-            	authentication(userName: artifactoryUser, password: artifactoryPwd)
-            }
-            pom.groupId = group
-            pom.artifactId = project.name
-        }          
-    }
-}
-
 
 task fatJar(type: Jar) {
-    baseName = project.name + '_all'
+    archiveBaseName = project.name + '_all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
 
 
 publishing {
+    repositories {
+        maven {
+            credentials {
+                username artifactoryUser 
+                password artifactoryPwd
+            }
+            url = artifactoryUrlLibSnap
+        }
+    }
+
     publications {
         MyPublication(MavenPublication) {
             from components.java
             artifact sourcesJar
+            artifact javadocJar
             groupId group
             artifactId project.name
             version version
@@ -79,7 +65,9 @@ publishing {
 bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    publications = ['MyPublication']     
+    publications = ['MyPublication'] 
+    override = true
+    publish = true
     pkg {
         repo = 'hltools'
         name = project.name
